<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_an_item"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/et_dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_a_name"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/et_dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_a_description"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/et_dialog_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_rating"
        android:inputType="numberDecimal"
        android:layout_marginTop="5dp"/>

    <Spinner
        android:id="@+id/sp_dialog_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <Spinner
        android:id="@+id/sp_dialog_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btn_dialog_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>